changed color and added yeti

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       }
 
       p {
-        background: #ffc125;
+        background: #c1E1c1;
         color: #5e2612;
         padding: 10px;
         visibility: hidden;
@@ -52,7 +52,7 @@
     </div>
     <!-- Thanks a lot to Willy Aguirre for his help with the code for this assessment -->
     <p class="story"></p>
-    <img src="img/skifreeyeti.jpg" alt = "skifree yeti">
+    <img src="img/skifreeyeti.jpg" width= "300" alt= "skifree yeti">
     <script src="main.js"></script>
   </body>
 </html>
